	disk fails.

	* utils.cpp (managed_stream_open/read/write/etc): Changed to be
	internal. These symbols don't need to be publicly exported.

	* utils.h: Added a Stream_Close function signature to
	ManagedStreamCallbacks.

	* bitmapimage.cpp (resource_notify): Make static/internal - does
	not need to be publicly exported.

	r:kangaroo

2009-08-14  Stephane Delcroix  <sdelcroix@novell.com>

	* bitmapimage.h|cpp, multiscaliemage.cpp: abort downaloaders on 
	source change. 
	
	r: lewing

2009-08-14  Andreia Gaita  <avidigal@novell.com>

	* dependencyobject.cpp (clone_animation_storage): detach the old
	storage, and change the storage of the animation clock to point to
	the newly cloned one - clocks only have a single storage reference,
	so when they die they need to delete the storage, and when we're
	cloning a storage, the clock remains the same, so it needs to get
	updated too. Also, don't detach the new storage or call
	AttachAnimationStorage manually, that's already	done in it's
	constructor.

	r: alan

2009-08-13  Larry Ewing  <lewing@novell.com>

	* usercontrol.cpp (MeasureOverride): don't constrain the results.

	Fixes DRT #417

	r: andreia

2009-08-13  Larry Ewing  <lewing@novell.com>

	* textblock.cpp (MeasureOverride):
	* textbox.cpp (MeasureOverride): ceil our measurement request when
	layout rounding is being done so that we don't get rounded down
	and forced to wrap.  More testing is in order but failure mode for
	this is painful.

	Fixes wrapping in Playboy and the chess final screen.

	r: jeff
	
2009-08-13  Larry Ewing  <lewing@novell.com>

	* timesource.h (MOON_PRIORITY_DEFAULT): lower our default priority
	to idle so that firefox and gtk can process events without getting
	starved.  Improved Quakelight and StrangeAttractor experience.

	r: andreia
	
2009-08-13  Larry Ewing  <lewing@novell.com>

	* src/brush.cpp: replace all cairo_matrix_invert calls with a
	version that warns if it fails.

	r: andreia

2009-08-13  Jeffrey Stedfast  <fejj@novell.com>
